--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -1,13 +1,11 @@
 ---
-title: Available form features and usage guidelines
+title: Form features and usage guidelines
 tags: footer, progress bar, title, date, alerts, radio button group, checkbox group, required field, contexual error message, dupcliate field validation, sequential duplicate form groups, review page, required checkbox before submission, remote error, event monitoring
 ---
 
-# Available form features and usage guidelines
+# Form features and usage guidelines
 
-These form features are available in the VAFS library. We've provided information about how to implement them in your form.
-
-## In this guide
+The following form features are available and commonly used in the VA Forms Library. The following information will help you implement them in your form.
 
 - [Form instructions](#form-instructions)
 - [Form footer](#form-footer)
