--- a/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
+++ b/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
@@ -503,5 +503,5 @@ These `schema` objects are assigned to pages within the `formConfig` object with
 
 On the second page, make sure to add the property `showPagePerItem: true` to ensure that there are separate pages for each item in the array. On the first page of the form, the user will enter in a few children. They will then be shown a `childAddress` page for the first child and then a separate `childAddress` page for the second child, and so on for all of the children entered. 
 
-Note that `arrayPath: 'childrenToAdd'` is used. This is the name we gave the `array` inside the form `schema` objects so we need to reference it here. The forms library will take care of connecting the dots as to what data goes with each item in the `array`.
+Note that `arrayPath: 'childrenToAdd'` is used. This is the name specified for the `array` inside the form `schema` objects, so we need to reference it here. The forms library will take care of connecting the dots as to what data goes with each item in the `array`.
 
