--- a/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
+++ b/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
@@ -7,11 +7,11 @@ tags: custom field validation, conditional fields, conditional pages, dynamic dr
 
 Some forms require custom validation, styles, or conditional information based on user input. Use these common patterns to address those needs.
 
-**Custom validation:**
+**Custom validation**
 - [Writing a custom field validation](#writing-a-custom-field-validation)
 - [Validating a field based on other fields in the same object](#validating-a-field-based-on-other-fields-in-the-same-object)
 
-**Conditional formatting:**
+**Conditional formatting**
 - [Changing drop-down options based on data in another field](#changing-drop-down-options-based-on-data-in-another-field)
 - [Showing a block of text with no associated fields](#showing-a-block-of-text-with-no-associated-fields)
 - [Conditionally hiding a group of fields](#conditionally-hiding-a-group-of-fields)
