--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -1,17 +1,16 @@
 ---
-title: VAFS - intermediate tutorial
+title: Adding complex features
 tags: form validation, conditional fields, required fields, conditional pages,
 ---
 
-# Intermediate tutorial
+# Adding complex features
 
-Previous: [Basic tutorial](/forms/form-tutorial-basic)
+Now that you've [created a simple form](/forms/form-tutorial-basic), let's take a look at how to handle some more complex features.
 
-Now that you've gone through and created a really simple form using the tutorial, let's take a look at how to handle some common use cases on forms.
 
-## Form validation
+## Custom form validation
+Because our forms are based on JSON Schema, you can rely on the built-in `types` and `pattern` property to do a lot of your validation. However, sometimes you need validation rules that go beyond what JSON Schema offers. To write custom validation, the forms library has a `ui:validation` helper:
 
-Because our forms are based on JSON Schema, you can rely on the built in types and pattern property to do a lot of your validation. However, sometimes you need validation rules that go beyond what JSON Schema offers. To write custom validation, we have a `ui:validation` helper:
 
 ```js
 page1: {
@@ -40,7 +39,7 @@ page1: {
 }
 ```
 
-`ui:validation` takes an array of functions, each of which is passed an errors object and the field data (plus some other parameters). So in the above example, if a user puts 'badString' in `myField`, then the form will display a validation error with the message passed in `addError()`.
+`ui:validation` takes an array of functions, each of which is passed an `errors` object and the field data (plus some other parameters). So in the above example, if a user puts 'badString' in `myField`, then the form will display a validation error with the message passed in `addError()`.
 
 One thing to note is that you can add `ui:validation` on any field or object in `uiSchema`, which allows you to validate groups of fields together:
 
@@ -82,7 +81,7 @@ Since we moved the validation array up to the root of `uiSchema`, the field data
 
 ### Custom validation error messages
 
-In addition to the above custom validation, you can also customize the messages for the built in JSON Schema validation. For example, if I have some pattern validation, I can set an understandable message:
+In addition to the above custom validation, you can also customize the messages for the built in JSON Schema validation. For example, if you have some pattern validation, you can set an understandable message:
 
 
 ```js
@@ -144,7 +143,7 @@ In the above config, `myOtherField` will be required if `myField` equals "test".
 
 ## Conditionally displayed fields
 
-Often when building forms you'll need to hide and show fields based on form data or other information. Our form system has three ways of doing so.
+Often when building forms you'll need to hide and show fields based on form data or other information. The form library has three ways of doing so.
 
 #### Expand under fields
 
@@ -184,11 +183,11 @@ page1: {
 }
 ```
 
-In the above example, `myConditionalField` will display whenever `myField` has a truthy value. You can add this to mutiple fields and all of them will be grouped under the `expandUnder` field. Note, however, that if any of these hidden fields are required when visible, you'll have to use `ui:required` to make sure they're not required when they're not displayed.
+In the above example, `myConditionalField` will display whenever `myField` has a valid value. You can add this to mutiple fields and all of them will be grouped under the `expandUnder` field. However, if any of these hidden fields are required when visible, you'll have to use `ui:required` to make sure they're not required when they're not displayed.
 
 ### Conditionally hidden fields
 
-If you just need to hide or show a field, without the expand under treatment, you can use `hideIf`:
+If you need to hide or show a field without the expand under treatment, you can use `hideIf`:
 
 ```js
 page1: {
@@ -248,11 +247,11 @@ page1: {
 }
 ```
 
-The depends function is passed the current form data, so you can check different conditions and return false if want to skip a page. Note that you want to make sure you're checking data a user would enter before potentially reaching this page, otherwise they won't ever see it.
+The `depends` function is passed the current form data, so you can check different conditions and return false if want to skip a page. Make sure you're checking data a user would enter before potentially reaching this page. Otherwise they won't ever see it.
 
 ## View-only data
 
-In some cases, you may have fields that you don't need to submit along with the form data. A confirmation email field, for example. In other cases you may also want to group fields into objects but not have that grouping reflected in the submitted data. This can be useful if you need to conditionally hide a group of fields and don't want to write hideIf functions every individual field.
+In some cases, you may have fields that you don't need to submit along with the form data, such as a confirmation email field, for example. In other cases you may want to group fields into objects, but not have that grouping reflected in the submitted data. This can be useful if you need to conditionally hide a group of fields and don't want to write `hideIf` functions every individual field.
 
 To keep a field from being submitted, you can prefix it with `view:`:
 
@@ -334,7 +333,4 @@ If we had left off the `view:` prefix it would be:
 }
 ```
 
-That should get you started with some of the common validation and conditional field scenarios. Many of the options above have extra parameters or options that may help with some less common scenarios, so make sure to check the [form config specification](/forms/config-options) for a full picture of all the options offered.
-
-
-Next: [Advanced tutorial](/forms/form-tutorial-advanced)
+That should get you started with some of the common validation and conditional field scenarios. Many of the options above have extra parameters or options that may help with some less common scenarios, so make sure to check the [form config specification](/forms/config-options) for a full picture of all the options offered. Next find out [how to use common definitions](/forms/form-tutorial-advanced).
