--- a/packages/documentation/src/pages/forms/forms-in-production.mdx
+++ b/packages/documentation/src/pages/forms/forms-in-production.mdx
@@ -1,19 +1,13 @@
 ---
-title: Forms in production
+title: Migrating form data
 tags: updating schema, migrations
 ---
 
-# Forms in production
+# Migrating form data
 
-Previous: [Setting up Save in Progress](./forms/save-in-progress)
+Once your form is in production and you're also using the [Save in Progress](/forms/save-in-progress) functionality, you have a dilemma when you want to change fields or validation on your form. Since some forms are saved, if you change the structure of the form, the saved data may no longer match, which might cause confusing validation errors for a user. Similarly, if validation changes, a user might have already gone past that field and won't know how to fix the new error.
 
-Now that you have a form in production, making future changes requires some extra care.
-
-## Changing your form schema
-
-Once you're in production and you're also using the save in progress functionality, you have a dilemma when you want to change some fields or some validation on your form. Since there are forms that are saved, if you change the structure of the form, the saved data may no longer match and result in confusing validation errors for a user. Similarly, if validation changes, a user might have already gone past that field and won't know how to fix the new error.
-
-To address this issue, we have the ability to write "migrations" for form data. This way, you can update a user's data to match the new structure, as well as move their position in the form back, if they need to adjust something. Migrations are functions, run in a sequence, based on the "version" of the form, which is saved along with the form data.
+To address this issue, you can write "migrations" for form data. This way, you can update a user's data to match the new structure, as well as move their position in the form back, if they need to adjust something. Migrations are functions, run in a sequence, based on the "version" of the form, which is saved along with the form data.
 
 Migrations go in the form config object:
 
@@ -34,7 +28,7 @@ const formConfig = {
 };
 ```
 
-We typically start at version 0 and increment each time we need to add a migration. Migrations are functions that get `formData`, `metadata`, and `formId` as arguments. And they must return the `formData` and `metadata`, with any changes that they have made. For example, here is a migration that the health care application uses to convert an old url:
+Typically start at version `0` and increment each time you need to add a migration. Migrations are functions that get `formData`, `metadata`, and `formId` as arguments. And they must return the `formData` and `metadata`, with any changes that they have made. For example, here is a migration that the health care application uses to convert an old URL:
 
 ```js
 ({ formData, metadata }) => {
@@ -49,9 +43,9 @@ We typically start at version 0 and increment each time we need to add a migrati
 }
 ```
 
-If the current return URL (which is the URL a user will return to when the load a saved form) matches the outdated one, we update it. The `formData` is not changed in this case.
+If the current return URL (which is the URL a user will return to when they load a saved form) matches the outdated one, we update it. The `formData` is not changed in this case.
 
-Another example from the health care application was to fix a bug in our form structure:
+Another example from the health care application was to fix a bug in the form structure:
 
 ```js
 (savedData) => {
@@ -67,6 +61,6 @@ Another example from the health care application was to fix a bug in our form st
 }
 ```
 
-In this example, we're moving an incorrectly located `isSpanishHispanicLatino` flag and setting it in the right spot.
+This example moves an incorrectly located `isSpanishHispanicLatino` flag and sets it in the right spot.
 
 Writing migrations is not very common, but you may need to do it if you end up modifying a form that's already in production.
