--- a/packages/documentation/src/pages/documentation-guide/index.mdx
+++ b/packages/documentation/src/pages/documentation-guide/index.mdx
@@ -1,3 +1,3 @@
 # Documentation guide
 
-The source for this site is maintained in the documentation package of the [department-of-veterans-affairs/veteran-facing-services-tools](https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/tree/master/packages/documentation) repo.
+The source for this site is maintained in the [documentation](https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/tree/master/packages/documentation) package of the [veteran-facing-services-tools](https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/) repo.
