Update docs for EmergencyBanner and MaintenanceBanner

--- a/packages/formation-react/src/components/EmergencyBanner/EmergencyBanner.mdx
+++ b/packages/formation-react/src/components/EmergencyBanner/EmergencyBanner.mdx
@@ -11,13 +11,13 @@ import EmergencyBanner from './EmergencyBanner'
 import EmergencyBanner from '@department-of-veterans-affairs/formation-react/EmergencyBanner'
 
 <EmergencyBanner
-  content={(
+  content={(`
     <div>
       <p>For questions about COVID-19 and how it affects VA health care and benefit services, visit our <a href="/coronavirus-veteran-frequently-asked-questions/">coronavirus FAQs</a> or read <a href="https://www.publichealth.va.gov/n-coronavirus/">VA’s public health response</a>.</p>
       <p>Please contact us first before going to any <a href="/find-locations">VA location</a>. Contacting us first helps us keep you safe.</p>
       <p>For the latest coronavirus information, visit the <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">CDC website</a>.</p>
     </div>
-  )}
+  `)}
   title="Coronavirus"
   visible
 />
@@ -26,13 +26,13 @@ import EmergencyBanner from '@department-of-veterans-affairs/formation-react/Eme
 ### Rendered Component
 <div className="site-c-reactcomp__rendered">
   <EmergencyBanner
-    content={(
+    content={(`
       <div>
         <p>For questions about COVID-19 and how it affects VA health care and benefit services, visit our <a href="/coronavirus-veteran-frequently-asked-questions/">coronavirus FAQs</a> or read <a href="https://www.publichealth.va.gov/n-coronavirus/">VA’s public health response</a>.</p>
         <p>Please contact us first before going to any <a href="/find-locations">VA location</a>. Contacting us first helps us keep you safe.</p>
         <p>For the latest coronavirus information, visit the <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">CDC website</a>.</p>
       </div>
-    )}
+    `)}
     title="Coronavirus"
     visible
   />
